Fixed Data Source selection in Properties dialog will raise an invalid value in page error on Windows.